<resources>
    <string name="app_name">Maternity</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="rate_hr">Rate/hr</string>
    <string name="aadhar_id">Aadhar ID</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
