<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/babysitter_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_bg_purple"
        android:hint="@string/name"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_photo_select_babysitter" />

    <EditText
        android:id="@+id/babysitter_dob"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_bg_purple"
        android:hint="@string/dob"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/babysitter_username" />

    <EditText
        android:id="@+id/babysitter_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_bg_purple"
        android:hint="+91"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/babysitter_dob" />

    <EditText
        android:id="@+id/babysitter_address"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_bg_purple"
        android:hint="@string/address"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/babysitter_phone" />

    <EditText
        android:id="@+id/babysitter_aadhar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_bg_purple"
        android:hint="@string/aadhar_id"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/babysitter_address" />

    <EditText
        android:id="@+id/babysitter_rate_per_hour"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_bg_purple"
        android:hint="@string/rate_hr"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/babysitter_aadhar" />

    <TextView
        android:id="@+id/textView_already_have_acc"
        android:layout_width="171dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:text="Already have an account?"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/babysitter_rate_per_hour"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/babysitter_rate_per_hour" />

    <Button
        android:id="@+id/button_babysitter_next"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_bg_cyan"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_already_have_acc"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/babysitter_rate_per_hour"
        app:layout_constraintTop_toBottomOf="@+id/babysitter_rate_per_hour" />

    <Button
        android:id="@+id/button_photo_select_babysitter"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_photo_button"
        android:text="Select Photo"
        android:textColor="#ffffff"
        android:src="@drawable/profilepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_babysitter_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_photo_select_babysitter"
        app:layout_constraintEnd_toEndOf="@+id/button_photo_select_babysitter"
        app:layout_constraintStart_toStartOf="@+id/button_photo_select_babysitter"
        app:layout_constraintTop_toTopOf="@+id/button_photo_select_babysitter" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>